[package]
name = "satnav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = "0.25"
pyo3 = { version = "0.25", features = ["extension-module", "auto-initialize"] }
rayon = "1.10.0"


[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "satnav"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
split-debuginfo = "packed"
